# spotifyd

./: .all-contributorsrc  .gitignore  .travis-yml  .travis.yml  .travis.yml.alternative  .travis.yml.org  404.html  CHANGELOG.md  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Cross.toml  Dockerfile  Feature-flags.html  Introduction.html  Makefile  README.md  build-release  index.html  params.json  print.html  rust-toolchain.org  rustfmt.toml  searchindex.js  searchindex.json  setup-dev-workspace.sh  spotifyd  spotifyd.rc-example  spotifyd.service
.ci/: before_deploy.sh
.github/: dependabot.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature_request.md
.github/scripts/: install-dependencies.sh  setup-vars.sh
.github/workflows/: cd.yml  check.yml  ci.yml  docs.yml  lint.yml  main.yml
amd64-docker/: Dockerfile
arm-docker/: Dockerfile
config/: Cli.html  File.html  index.html
config/services/: MacOS.html  Systemd.html  Sytemd.html  index.html
contrib/: spotifyd.conf  spotifyd.service
contrib/systemd/system/: spotifyd.service
docs/: book.toml
docs/src/: Introduction.md  SUMMARY.md  troubleshooting.md
docs/src/advanced/: README.md  dbus.md  hooks.md  launchd.md  mpris.md  systemd.md
docs/src/config/: Cli.md  File.md  README.md
docs/src/config/services/: MacOS.md  README.md  Systemd.md  Sytemd.md
docs/src/configuration/: README.md  audio.md  auth.md  other.md
docs/src/installation/: Build-on-Linux.md  Cross-Compiling-on-Ubuntu.md  Feature-flags.md  Fedora.md  FreeBSD.md  MacOS.md  OpenBSD.md  README.md  Raspberry-Pi-32.md  Raspberry-Pi-32_ARM32.md  Raspberry-Pi-64.md  Raspberry-Pi-64_ARM64.md  Raspberry-Pi.md  Run-on-Linux.md  Ubuntu.md  cross-compilation.md  cross-compile-using-docker.md  raspberrypi64.md  service.md  source.md
docs/src/other/: D-Bus-control.md  Troubleshooting.md  User-supplied-scripts.md
hooks/: pre-commit
init/: spotifyd.rc  spotifyd.upstart
installatio/: MacOS.html
installation/: Cross-Compiling-on-Ubuntu.html  FreeBSD.html  MacOS.html  Raspberry-Pi.html  Ubuntu.html  index.html
scripts/: README.md  sc-dmenu  scli  spotifyd-nowplaying  spotifyd-radio.py
snap/: snapcraft.yaml
src/: alsa-audio.c  alsa_mixer.rs  appkey.key  audio.c  audio.h  callbacks.c  callbacks.h  cli.rs  commandq.c  commandq.h  commands.c  commands.h  config.c  config.h  config.rs  dbus_mpris.rs  error.rs  helpers.c  helpers.h  macros.rs  main.rs  main_loop.rs  no_mixer.rs  oauth.rs  parser.c  parser.h  player_event_handler.rs  playlist.c  playlist.h  process.rs  queue.c  queue.h  search.c  search.h  session.c  session.h  setup.rs  socket.c  socket.h  spotifyd.c  (+2 more)
