[package]
authors = ["Simon Persson <simon@flaskpost.org>", "Sven Lechner <sven.lechner@rwth-aachen.de>"]
edition = "2018"
name = "spotifyd"
description = "A Spotify daemon"
repository = "https://github.com/Spotifyd/spotifyd"
license = "GPL-3.0-only"
version = "0.3.4"
rust-version = "1.62"

[dependencies]
alsa = { version = "0.5", optional = true }
chrono = "0.4"
daemonize = "0.4"
dbus = { version = "0.9", optional = true }
dbus-tokio = { version = "0.7.3", optional = true }
dbus-crossroads = { version = "0.4.0", optional = true }
fern = { version = "0.6.0", features = ["syslog-4"] }
futures = "0.3.15"
gethostname = "0.2.0"
hex = "0.4"
keyring = { version = "2.0", optional = true }
libc = "0.2.82"
log = "0.4.6"
rspotify = { version = "0.11.6", features = ["client-ureq", "ureq-rustls-tls"], default-features = false, optional = true }
serde = { version = "1.0.115", features = ["derive"] }
sha-1 = "0.9"
structopt = "0.3.17"
syslog = "4"
tokio = {version = "1.6.1", features = ["signal", "rt-multi-thread", "process", "io-std"] }
tokio-compat = { version = "0.1.6", features = ["rt-current-thread"] }
tokio-compat-02 = "0.2.0"
tokio-stream = "0.1.7"
url = "2.2.2"
xdg = "2.2"
librespot-audio = { version = "0.2.0", default-features=false, features = ["with-tremor"] }
librespot-playback = { version = "0.2.0", default-features=false }
librespot-core = { version = "0.2.0"}
librespot-connect = { version = "0.2.0"}
toml = "0.5.8"
color-eyre = "0.5"

[target."cfg(target_os = \"macos\")".dependencies]
whoami = "0.9.0"

[dev-dependencies]
env_logger = "0.7"

[features]
alsa_backend = ["librespot-playback/alsa-backend", "alsa"]
dbus_keyring = ["keyring"]
dbus_mpris = ["dbus", "dbus-tokio", "dbus-crossroads", "rspotify"]
default = ["alsa_backend"]
portaudio_backend = ["librespot-playback/portaudio-backend"]
pulseaudio_backend = ["librespot-playback/pulseaudio-backend"]
rodio_backend = ["librespot-playback/rodio-backend"]

[package.metadata.deb]
depends = "$auto, systemd, pulseaudio"
features = [
    "pulseaudio_backend",
    "dbus_keyring",
    "dbus_mpris",
]
assets = [
    ["target/release/spotifyd", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/spotifyd/README", "644"],
    ["contrib/spotifyd.service", "etc/systemd/user/", "644"],
]
