[package]
authors = ["Simon Persson <simon@flaskpost.org>", "Sven Lechner <sven.lechner@rwth-aachen.de>"]
edition = "2018"
name = "spotifyd"
description = "A Spotify daemon"
repository = "https://github.com/Spotifyd/spotifyd"
license = "GPL-3.0-only"
version = "0.3.5"
rust-version = "1.67"

[dependencies]
alsa = { version = "0.7", optional = true }
chrono = "0.4"
dbus = { version = "0.9", optional = true }
dbus-tokio = { version = "0.7.3", optional = true }
dbus-crossroads = { version = "0.5.0", optional = true }
fern = { version = "0.6.0", features = ["syslog-6"] }
futures = "0.3.15"
gethostname = "0.4.0"
hex = "0.4"
keyring = { version = "2.0", optional = true }
libc = "0.2.82"
log = "0.4.6"
rspotify = { version = "0.12.0", features = ["client-ureq", "ureq-rustls-tls"], default-features = false, optional = true }
serde = { version = "1.0.115", features = ["derive"] }
sha-1 = "0.10"
structopt = "0.3.17"
tokio = {version = "1.26.0", features = ["signal", "rt-multi-thread", "process", "io-std"] }
tokio-stream = "0.1.7"
url = "2.2.2"
librespot-audio = { version = "0.4", default-features = false }
librespot-playback = { version = "0.4", default-features = false }
librespot-core = { version = "0.4" }
librespot-discovery = { version = "0.4" }
librespot-connect = { version = "0.4" }
toml = "0.7"
color-eyre = "0.6"
directories = "5.0.1"

[target."cfg(unix)".dependencies]
daemonize = "0.5"
syslog = "6"

[target."cfg(target_os = \"macos\")".dependencies]
whoami = "1"

[dev-dependencies]
env_logger = "0.10"

[features]
alsa_backend = ["librespot-playback/alsa-backend", "alsa"]
dbus_keyring = ["keyring"]
dbus_mpris = ["dbus", "dbus-tokio", "dbus-crossroads", "rspotify"]
default = ["alsa_backend"]
portaudio_backend = ["librespot-playback/portaudio-backend"]
pulseaudio_backend = ["librespot-playback/pulseaudio-backend"]
rodio_backend = ["librespot-playback/rodio-backend"]

[package.metadata.deb]
depends = "$auto, systemd, pulseaudio"
features = ["pulseaudio_backend", "dbus_keyring", "dbus_mpris"]
assets = [
    ["target/release/spotifyd", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/spotifyd/README", "644"],
    ["contrib/spotifyd.service", "etc/systemd/user/", "644"],
]
